add users routes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,10 @@
 {
   "extends": "airbnb-base",
-  "allow": "_id"
+  "eslint no-underscore-dangle":[
+    "error",
+    {
+      "allow": "_id"
+    }
+  ]
+  // "allow": "_id"
 }
