--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
